# subfigplot

./: DrawObjects.py  README.MD  SubfigGrid.py  custom_cmaps.py  setup.cfg
examples/: plot_panels.py  plotexamples.py  test_no_margins.py  uneven_grid_plot.py
multiplot/: colormap_helpers.py  subfiggrid.py
pythonplot/: custom_cmaps.py  gridplot.py
subfigplot/: __init__.py  bc.py  colormap_helpers.py  simplegrid.py  subfiggrid.py
