[metadata]
name = subfigplot
version = 0.0.1
author = Berend Zwartsenberg
author_email = author@example.com
description = A package to help format subfigure plots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com
project_urls =
    Bug Tracker = https://github.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
install_requires =
    numpy
    matplotlib; python_version >= "3.6"
